--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>lodestone</title>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" type="image/jpeg" href="%PUBLIC_URL%/lodestonerunegod.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="React and Typescript"
+    <meta property="og:title" content="Lodestone Studio"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:image" content="https://live.staticflickr.com/65535/51017225923_3f1a7790a4_c.jpg"/>
+    <meta property="og:site_name" content="Lodestone"/>
+    <meta property="og:description" content="Music and Photography"/>
+    <meta name="description" content="Music and Photography"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <link rel="apple-touch-icon" type="image/jpeg" href="%PUBLIC_URL%/lodestonerunegod2white.png" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Thetako</title>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-5ZJ9BVW');</script>
+    <!-- End Google Tag Manager -->
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5ZJ9BVW"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+    
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+    <!-- event api -->
+    <script charset="utf-8" src="https://widget.bandsintown.com/main.min.js"></script>
+    <a class="bit-widget-initializer" data-artist-name="djlodestone" data-display-local-dates="true" data-display-past-dates="true" data-auto-style="false" data-text-color="#FFFFFF" data-link-color="#00b4b3" data-background-color="rgba(0,0,0,0)" data-display-limit="15" data-display-start-time="true" data-link-text-color="#FFFFFF" data-display-lineup="true" data-display-play-my-city="true" data-separator-color="rgba(124,124,124,0.25)"></a>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
