--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,12 @@
     <link rel="icon" type="image/jpeg" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta property="og:title" content="Lodestone Studio"/>
+    <meta property="og:title" content="Alice Huang"/>
     <meta property="og:type" content="website"/>
     <meta property="og:image" content="https://live.staticflickr.com/65535/51017225923_3f1a7790a4_c.jpg"/>
-    <meta property="og:site_name" content="Lodestone"/>
-    <meta property="og:description" content="Music and Photography"/>
-    <meta name="description" content="Music and Photography"
+    <meta property="og:site_name" content="Alice Huang"/>
+    <meta property="og:description" content="Alice Huang"/>
+    <meta name="description" content="Alice Huang"
     />
     <link rel="apple-touch-icon" type="image/jpeg" href="%PUBLIC_URL%/logo.png" />
 
@@ -31,10 +31,6 @@
     <!-- End Google Tag Manager (noscript) -->
     
     <div id="root"></div>
-
-    <!-- event api -->
-    <script charset="utf-8" src="https://widget.bandsintown.com/main.min.js"></script>
-    <a class="bit-widget-initializer" data-artist-name="djlodestone" data-display-local-dates="true" data-display-past-dates="true" data-auto-style="false" data-text-color="#FFFFFF" data-link-color="#00b4b3" data-background-color="rgba(0,0,0,0)" data-display-limit="15" data-display-start-time="true" data-link-text-color="#FFFFFF" data-display-lineup="true" data-display-play-my-city="true" data-separator-color="rgba(124,124,124,0.25)"></a>
 
   </body>
 </html>
