--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>lodestone</title>
+    <title>Alice Huang</title>
     <meta charset="utf-8" />
     <link rel="icon" type="image/jpeg" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
