--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Alice Huang</title>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/jpeg" href="%PUBLIC_URL%/logo.png" />
+    <link rel="icon" type="image/jpeg" href="%PUBLIC_URL%/image.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta property="og:title" content="Alice Huang"/>
@@ -13,7 +13,7 @@
     <meta property="og:description" content="Alice Huang"/>
     <meta name="description" content="Alice Huang"
     />
-    <link rel="apple-touch-icon" type="image/jpeg" href="%PUBLIC_URL%/logo.png" />
+    <link rel="apple-touch-icon" type="image/jpeg" href="%PUBLIC_URL%/image.png" />
 
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
