--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <title>Alice Huang</title>
@@ -6,31 +6,48 @@
     <link rel="icon" type="image/jpeg" href="%PUBLIC_URL%/image.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta property="og:title" content="Alice Huang"/>
-    <meta property="og:type" content="website"/>
-    <meta property="og:image" content="https://live.staticflickr.com/65535/51017225923_3f1a7790a4_c.jpg"/>
-    <meta property="og:site_name" content="Alice Huang"/>
-    <meta property="og:description" content="Alice Huang"/>
-    <meta name="description" content="Alice Huang"
+    <meta property="og:title" content="Alice Huang" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:image"
+      content="https://live.staticflickr.com/65535/51017225923_3f1a7790a4_c.jpg"
     />
-    <link rel="apple-touch-icon" type="image/jpeg" href="%PUBLIC_URL%/image.png" />
+    <meta property="og:site_name" content="Alice Huang" />
+    <meta property="og:description" content="Alice Huang" />
+    <meta name="description" content="Alice Huang" />
+    <link
+      rel="apple-touch-icon"
+      type="image/jpeg"
+      href="%PUBLIC_URL%/image.png"
+    />
 
     <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-5ZJ9BVW');</script>
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-5ZJ9BVW");
+    </script>
     <!-- End Google Tag Manager -->
   </head>
   <body>
-
     <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5ZJ9BVW"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-5ZJ9BVW"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden"
+      ></iframe
+    ></noscript>
     <!-- End Google Tag Manager (noscript) -->
-    
-    <div id="root"></div>
 
+    <div id="root"></div>
   </body>
 </html>
