--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Alice Huang</title>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/jpeg" href="%PUBLIC_URL%/image.png" />
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta property="og:title" content="Alice Huang" />
@@ -17,8 +17,8 @@
     <meta name="description" content="Alice Huang" />
     <link
       rel="apple-touch-icon"
-      type="image/jpeg"
-      href="%PUBLIC_URL%/image.png"
+      type="image/png"
+      href="%PUBLIC_URL%/logo.png"
     />
 
     <!-- Google Tag Manager -->
