--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:image"
-      content="https://live.staticflickr.com/65535/51017225923_3f1a7790a4_c.jpg"
+      content="%PUBLIC_URL%/desk.jpg"
     />
     <meta property="og:site_name" content="Alice Huang" />
     <meta property="og:description" content="Alice Huang" />
